fix alignment of slideshow controls

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,16 +44,10 @@ body {
 }
 
 .content .row .span12 {
-  > .bx-wrapper > .bx-controls {
-      display: none;
-  }
-
   .bx-next {
     margin-top: -16px;
     margin-right: 10px;
   }
-
-
 }
 
 
